dark mode stuff that i cant fix ffs

--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -13,7 +13,7 @@
 
 .navbar-brand {
   font-weight: 500;
-  color: #7b28ae;
+  color: var(--primary);
   font-size: 24px;
   transition: 0.3s color;
 }
@@ -113,7 +113,7 @@
     transform: translateX(-50%);
     width: 0;
     height: 2px;
-    background-color: #7b28ae;
+    background-color: var(--primary);
     visibility: hidden;
     transition: 0.3s ease-in-out;
   }
